--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ header:after {
     right: 0;
     bottom: 0;
     background: rgba(0,0,0,.6);
-    /* background: linear-gradient(#434254,#e66465); */
     z-index: 2;
 }
 
@@ -62,12 +61,17 @@ header:after {
     z-index: 3;
      
     color: #fff;
+
+
+    text-align: center;
 }
 
 
 .header__title{
 
     font-size: 80px;
+
+    
 }
 
 .header__suptitle{
@@ -75,7 +79,7 @@ header:after {
     font-weight: 100;
     line-height: 1.7;
     font-size: 30px;
-    padding: 10px 145px;
+   
     text-transform: uppercase;
     
 }
@@ -121,11 +125,6 @@ header:after {
 .card{
     margin-top: 20px;
 }
-
-/* .card__inner{
-    /* width: 33.3333%; 
-    width: 50%;
-} */
 
 .card__icon{
     display: flex;
@@ -193,4 +192,155 @@ h5{
     font-size: 15px;
     font-weight: 500;
     color: #fff;
+}
+
+
+@media(max-width:1200px)
+{
+    .about__inner {
+        
+        justify-content: space-around;
+    }
+}
+
+
+@media(max-width:1070px)
+{
+    .header__inner{
+        right: 20%;
+    }
+}
+
+
+@media(max-width:875px){
+
+    /* .header__inner{
+        right: 18%;
+    } */
+    .header__title {
+        font-size: 65px;
+    }
+
+    .header__suptitle{
+
+        font-size: 17px;
+        padding: 12px 95px;
+    }
+
+    .section__title::after, .section__title::before{
+        width: 25%;
+
+    }
+
+
+    .about__text{
+        line-height: 1.2;
+        font-size: 15px;
+        margin: 20px 50px;
+    }
+
+
+    .card__icon{
+        font-size: 40px;
+    }
+
+    .card__title{
+        font-size: 15px;
+    }
+
+    .card__suptitle{
+        font-size: 20px;
+    }
+
+    .card__suptitle {
+        font-size: 16px;
+    }
+}
+
+@media(max-width:670px){
+
+    .header__title {
+        font-size: 57px;
+    }
+
+    .about__text{
+        margin: 10px 0;
+        max-width: 100%;
+    }
+}
+
+
+@media(max-width:570px){
+    
+    .header__title {
+        font-size: 50px;
+    }
+
+    .about__inner{
+        display: block;
+    }
+
+    .about__text {
+        line-height: 1.7;
+        padding: 30px;
+        width: 100%;
+    }
+
+    .section__title::after, .section__title::before{
+        width: 20%;
+        margin: 7px 10px;
+    }
+
+    .skill__inner{
+        display: block;
+    }
+
+    .skill__text{
+        max-width: 100%;
+        line-height: 1.5;
+    }
+
+    .card__item--skill {
+        display: flex;
+    }
+}
+
+@media(max-width:515px){
+    
+    .header__title {
+        font-size: 45px;
+    }
+}
+
+
+@media(max-width:430px){
+
+    .header__inner{
+        top:65%;
+    }
+    
+    .header__title {
+        font-size: 36px;
+    }
+
+    .header__suptitle {
+        font-size: 14px;
+        padding: 8px 75px;
+    }
+
+    .card__suptitle--skill {
+        font-size: 15px;
+    }
+
+    .card__icon{
+        font-size: 20px;
+    }
+}
+
+
+@media(max-width: 350px){
+    
+    .header__inner{
+        right: 7%;
+    }
 }
